Closed Bug 1657493 Opened 4 years ago Closed 4 years ago

Crash [@ mozilla::MozPromise<T>::Private::Resolve<T> ] reading/clicking on news article

Categories

(MailNews Core :: Networking: NNTP, defect, P1)

Unspecified
All

Tracking

(thunderbird_esr78 unaffected, thunderbird81+ fixed)

VERIFIED FIXED
82 Branch
Tracking Status
thunderbird_esr78 --- unaffected
thunderbird81 + fixed

People

(Reporter: bc, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: crash, regression, reproducible)

Crash Data

Attachments

(1 file)

Hit this today with Dave Lawrence's happy bmo push day! message for 8/5/20 on Thunderbird Daily / Linux.

Just clicking on the message causes the crash.
news://news.mozilla.org:119/mailman.45.1596662020.1053.dev-platform@lists.mozilla.org

This link for the same message in a different newsgroup did not crash
news://news.mozilla.org:119/mailman.44.1596661890.1053.tools-bmo@lists.mozilla.org

bp-a50b5e24-e65b-4cfa-91c7-46cc90200805
bp-6cfd9f88-3e4b-4b6b-8e3e-aab550200805
bp-4b75906d-fa4d-4f6f-8cff-247400200805

Frame 	Module 	Signature 	Source 	Trust
0 	libxul.so 	void mozilla::MozPromise<mozilla::net::DocumentLoadListener::OpenPromiseSucceededType, mozilla::net::DocumentLoadListener::OpenPromiseFailedType, true>::Private::Resolve<mozilla::net::DocumentLoadListener::OpenPromiseSucceededType>(mozilla::net::DocumentLoadListener::OpenPromiseSucceededType&&, char const*) 	xpcom/threads/MozPromise.h:1127 	context
1 	libxul.so 	mozilla::net::DocumentLoadListener::RedirectToRealChannel(unsigned int, unsigned int, mozilla::Maybe<unsigned long> const&, nsTArray<mozilla::ipc::Endpoint<mozilla::extensions::PStreamFilterParent> >&&) 	netwerk/ipc/DocumentLoadListener.cpp:1773 	cfi
2 	libxul.so 	mozilla::net::DocumentLoadListener::TriggerRedirectToRealChannel(mozilla::Maybe<unsigned long> const&) 	netwerk/ipc/DocumentLoadListener.cpp:1871 	cfi
3 	libxul.so 	mozilla::net::DocumentLoadListener::OnStartRequest(nsIRequest*) 	netwerk/ipc/DocumentLoadListener.cpp:2067 	cfi
4 	libxul.so 	mozilla::net::ParentChannelListener::OnStartRequest(nsIRequest*) 	netwerk/protocol/http/ParentChannelListener.cpp:98 	cfi
5 	libxul.so 	nsDocumentOpenInfo::OnStartRequest(nsIRequest*) 	uriloader/base/nsURILoader.cpp:166 	cfi
6 	libxul.so 	mozilla::net::ParentProcessDocumentOpenInfo::OnDocumentStartRequest(nsIRequest*) 	netwerk/ipc/DocumentLoadListener.cpp:274 	cfi
7 	libxul.so 	mozilla::net::nsStreamListenerTee::OnStartRequest(nsIRequest*) 	netwerk/base/nsStreamListenerTee.cpp:24 	cfi
8 	libxul.so 	nsMsgProtocol::OnStartRequest(nsIRequest*) 	comm/mailnews/base/util/nsMsgProtocol.cpp:319 	cfi
9 	libxul.so 	nsNNTPProtocol::LoadUrl(nsIURI*, nsISupports*) 	comm/mailnews/news/src/nsNNTPProtocol.cpp:1010 	cfi
10 	libxul.so 	nsMsgProtocol::AsyncOpen(nsIStreamListener*) 	comm/mailnews/base/util/nsMsgProtocol.cpp:557 	cfi

There also some Mac crashes bp-d95cb981-7231-4ad6-874f-80f9e0200805

Flags: needinfo?(benc)

I'm on 20200805101432, macos, and see the same thing. My about:crashes doesn't show them, though.

It also crashes on Windows when trying to read a newsgroup message.
bp-ac10406e-f650-4ed1-a67f-8562a0200807

regressionwindow-wanted:
Last good:
Comm-Central:ae90541a3ecd / Mozilla-Central:9239fb1c6ee8
First bad:
Comm-Central:ae90541a3ecd / Mozilla-Central:720b1bbf1b6d

So regression by Bug 1654922

Regressed by: 1654922

Anny, can you check this as comment 4 suggests its a regression from the DC pref removal?

Flags: needinfo?(agakhokidze)
Severity: -- → S1
Component: General → Networking: NNTP
Product: Thunderbird → MailNews Core

Nevermind, saw that the Thunderbird person is also cc'd here.

Flags: needinfo?(agakhokidze)

I tried a former good build and fiddled a bit with the prefs.

If I set the pref browser.tabs.documentchannel.ppdc to true, this build also crashes:

bp-2a813687-16a1-439a-a9b4-803a60200815

So Bug 1654922 probably just reveals an older problem.

Also crashes on Linux when trying to read a newsgroup message.

(In reply to Alfred Peters from comment #7)

I tried a former good build and fiddled a bit with the prefs.

If I set the pref browser.tabs.documentchannel.ppdc to true, this build also crashes:

(In reply to Pulsebot from Bug 1633198 comment #3)

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/353338823ec9
set browser.tabs.documentchannel.ppdc false (tests opening new windows broken without it). rs=bustage-fix

Yep, nothing new... :-(

See Also: → 1633198, 1655616
Depends on: 1633198
Flags: needinfo?(benc)
See Also: 1633198

needs additional immediate attention in bug 1633198 ?
easily reproduced

bp-b39efebb-9dd8-4f26-9ac9-d61fc0200826 on windows 81.0b1

Crash Signature: [@ mozilla::MozPromise<T>::Private::Resolve<T> ] → [@ mozilla::MozPromise<T>::Private::Resolve<T> ] [@ RtlAcquireSRWLockExclusive | xul.dll | umppc11604.dll | mozglue.dll | umppc11604.dll ]
Flags: needinfo?(mkmelin+mozilla)
Flags: needinfo?(benc)
Priority: -- → P1
Summary: Crash [@ mozilla::MozPromise<T>::Private::Resolve<T> ] reading news → Crash [@ mozilla::MozPromise<T>::Private::Resolve<T> ] reading/clicking on news article

Crashes at https://hg.mozilla.org/mozilla-central/file/tip/xpcom/threads/MozPromise.h#l1127 so something there is not what's expected.
Anyway, looks like I did find a bandaid fix

Flags: needinfo?(mkmelin+mozilla)

Bandaid fix. With this I can read news articles.
May be slower than usual though?

Anyway, it would be nice not to have this crash going to beta.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #9172251 - Flags: review?(benc)
Comment on attachment 9172251 [details] [diff] [review] bug1657493_news_crash_bandaid.patch Review of attachment 9172251 [details] [diff] [review]: ----------------------------------------------------------------- Seems like a fine stopgap until we dig into it deeper.
Attachment #9172251 - Flags: review?(benc) → review+
Target Milestone: --- → 82 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/6233cd297d44
don't crash when readin news. r=benc

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED

Comment on attachment 9172251 [details] [diff] [review]
bug1657493_news_crash_bandaid.patch

[Approval Request Comment]
Crash fix. Should be able to verify it on trunk with today's nightly which is building as we speak.

Flags: needinfo?(benc)
Attachment #9172251 - Flags: approval-comm-beta?

It does no more crash...but also doesn't show new news messages. It only shows already downloaded news. It stays on "Loading Message..." in the statusbar. Tested on different news servers.

(In reply to Richard Marti (:Paenglab) from comment #17)

It does no more crash...but also doesn't show new news messages. It only shows already downloaded news. It stays on "Loading Message..." in the statusbar. Tested on different news servers.

Same here.
TB shows only articles from the local datastore or possibly from the cache.

Yeah not working very well... but no crash.

We decided to not take it on this beta. We'll get it on the next round.

Crash Signature: [@ mozilla::MozPromise<T>::Private::Resolve<T> ] [@ RtlAcquireSRWLockExclusive | xul.dll | umppc11604.dll | mozglue.dll | umppc11604.dll ] → [@ mozilla::MozPromise<T>::Private::Resolve<T> ] [@ RtlAcquireSRWLockExclusive | xul.dll | umppc11604.dll | mozglue.dll | umppc11604.dll ] [@ pthread_mutex_trylock | mozilla::detail::MutexImpl::lock | XUL@0x6e2c8cc | XUL@0x900710 | XUL@0x900430 | arena_…
OS: Unspecified → All
Depends on: 1661955

I hit this when I tested 81.0b2 and the signature is a bit different (@ RtlAcquireSRWLockExclusive | mozilla::detail::MutexImpl::MutexImpl | mozilla::MakeRefPtr<T>)

Crash info here: https://crash-stats.mozilla.org/report/index/98bf463d-0f65-445b-89a3-275ea0200831

Crash Signature: arena_t::MallocSmall | XUL@0x4950f8c | XUL@0x4670236 | arena_t::DallocSmall | arena_dalloc | XUL@0x466fd6c | XUL@0x466ffd3 | XUL@0x466fd6c | XUL@0x... ] → arena_t::MallocSmall | XUL@0x4950f8c | XUL@0x4670236 | arena_t::DallocSmall | arena_dalloc | XUL@0x466fd6c | XUL@0x466ffd3 | XUL@0x466fd6c | XUL@0x... ] [@ RtlAcquireSRWLockExclusive | mozilla::detail::MutexImpl::MutexImpl | mozilla::MakeRefPtr<T> ]

Comment on attachment 9172251 [details] [diff] [review]
bug1657493_news_crash_bandaid.patch

[Triage Comment]
Approved for beta

Attachment #9172251 - Flags: approval-comm-beta? → approval-comm-beta+
Crash Signature: arena_t::MallocSmall | XUL@0x4950f8c | XUL@0x4670236 | arena_t::DallocSmall | arena_dalloc | XUL@0x466fd6c | XUL@0x466ffd3 | XUL@0x466fd6c | XUL@0x... ] [@ RtlAcquireSRWLockExclusive | mozilla::detail::MutexImpl::MutexImpl | mozilla::MakeRefPtr<T> ] → arena_t::MallocSmall | XUL@0x4950f8c | XUL@0x4670236 | arena_t::DallocSmall | arena_dalloc | XUL@0x466fd6c | XUL@0x466ffd3 | XUL@0x466fd6c | XUL@0x... ] [@ RtlAcquireSRWLockExclusive | mozilla::detail::MutexImpl::MutexImpl | mozilla::MakeRefPtr<T> ] [@…

I can confirm, crash is gone in 81.0b3 candidate

Status: RESOLVED → VERIFIED
Crash Signature: ] [@ RtlAcquireSRWLockExclusive | mozilla::detail::MutexImpl::lock | mozilla::MozPromise<T>::Private::Resolve<T> ] → ] [@ RtlAcquireSRWLockExclusive | mozilla::detail::MutexImpl::lock | mozilla::MozPromise<T>::Private::Resolve<T> ] [@ RtlAcquireSRWLockExclusive | mozilla::MozPromise<T>::Private::Resolve<T> ]

possible dup bug 1630597

Blocks: 1661958

(In reply to Wayne Mery (:wsmwk) from comment #26)

I can confirm, crash is gone in 81.0b3 candidate

Crash is gone but in 81.0b4 still can't read newsgroups messages (messages are not fetched) :-(

(In reply to Matthew from comment #28)

still can't read newsgroups messages (messages are not fetched) :-(

That will be fixed via bug 1661955 - available in beta 82 next week

See Also: → 1661955
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: