Bug 1657493 - don't crash when readin news. r=benc